--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <title>Document</title>
 </head>
 <body>
-    
+    <h1>this is my portfolio website</h1>
+    <h2>i will  post my  projects  on  this website</h2>
 </body>
 </html>
